# get_postcards

./: .gitignore  Makefile  README.md  pyproject.toml
get_image_script/: __init__.py  download_images.py  get_img_links.py  parse_args.py
get_image_script/fixture/: Открытое_письмо_Мешок.html
get_image_script/scripts/: get_postcards.py
